--- a/src/assets/scss/templates/_leaderboard.scss
+++ b/src/assets/scss/templates/_leaderboard.scss
@@ -1,23 +1,47 @@
 
 $border-radius: 0.6em;
 
-.main-wrapper {
-    padding: 1.5em;
+// .main-wrapper {
+//     padding: 1.5em;
+// }
+
+// .leaderboard-wrapper {
+//     padding: 1.5em;
+// }
+
+.header-top {
+    padding: 0px;
+    margin: 0px;
+    transform: translateY(10px);
+    img {
+        padding: 0px;
+        margin: 0px;
+    }
 }
 
-.leaderboard-wrapper {
-    // border: 1px solid rgba($color: #fff, $alpha: 0.1);
-    padding: 1.5em;
+.header-bottom {
+    padding: 0px;
+    margin: 0px;
+    transform: translateY(-3px);
+    img {
+        padding: 0px;
+        margin: 0px;
+    }
 }
 
 .leaderboard-header {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 0.8em;
-    align-items: center;
+    // flex-direction: column;
+    // margin-bottom: 0.8em;
+    align-items: baseline;
     h1 {
-        font-size: 1em;
-        margin-bottom: 15px;
+        font-size: 1.8em;
+        margin-bottom: 5px;
+    }
+    p {
+        margin-bottom: 5px;
+
     }
     .leaderboard-header-logo {
         width: 180px;
@@ -31,8 +55,9 @@ $border-radius: 0.6em;
     background: darken($color: $theme-color, $amount: 2);
     padding: 1em;
     display: grid;
-    grid-template-columns: 1fr 6fr 1fr 1fr 1fr;
-    border-radius: $border-radius $border-radius 0px 0px;
+    grid-template-columns: 1fr 6fr 1fr 1fr 1.5fr;
+    padding-top: 0.5em;
+    // border-radius: $border-radius $border-radius 0px 0px;
     p {
         color: #fff;
         font-size: 0.9em;
@@ -49,7 +74,7 @@ $border-radius: 0.6em;
     background: #fff;
     padding: 1em;
     display: grid;
-    grid-template-columns: 1fr 6fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 6fr 1fr 1fr 1.5fr;
     align-items: center;
     // border-top: 1px solid #efefef;
     p {
@@ -57,19 +82,35 @@ $border-radius: 0.6em;
         color: $font-color;
         font-size: 1.1em;
         margin-bottom: 0px; 
+        font-family: $bold-font;
     }
 
     .player-pos {
         padding-right: 1.5em;
+        font-family: $bold-font;
+    }
+
+    .player-points {
+        position: relative;
+        // background: green;
+        background: url(../img/points-bg.svg) no-repeat center center;
+        background-size: contain;
+        padding: 0.5em;
+    }
+
+    .points-bg {
+        position: absolute;
+        top: 0;
+        left: 0;
     }
 
     .td-points {
         background: $accent-color;
-        // background: #91D9AE;
-        padding: 0.5em;
-        border-radius: 4px;
+        // height: auto;
+        // border-radius: 4px;
         font-family: $bold-font;
         color: $theme-color;
+        z-index: 1000;
     }
 }
 
