--- a/src/assets/scss/templates/_fixtures-results.scss
+++ b/src/assets/scss/templates/_fixtures-results.scss
@@ -8,6 +8,7 @@
         color: #fff;
         text-transform: uppercase;
         font-family: $bold-font;
+        margin-bottom: 0.5em;
     }
 }
 
