--- a/src/partials/comp-format.html
+++ b/src/partials/comp-format.html
@@ -3,13 +3,17 @@
     <div class="padding-x0"></div>
         <div class="columns">
             <div class="column is-6 is-offset-3 is-offset-0-mobile">
+
+                <div class="main-heading">
+                    <h1>Competition format</h1>
+                </div>
                 
                 <div class="footer-content-wrapper">
                     <div class="header-top">
                         <img src="{{root}}assets/img/leaderboard-top.svg" alt="">
                     </div>
                     <div class="footer-content">
-                        <h3>Competition format</h3>
+                        <h3>The Montessori Poker League</h3>
                         <p>The league is played online between players accross the season, a total of 6 rounds, each round consists of 2 games. The final round of the season is also know as the 'Main Event' and double points are awarded to the winner of that round.</p>
                         <p>Three hundred points are awarded for first place, 200 for second place and 45 points for entry for each game, with the player with the most points at the end of the season winning the Montessori Poker League.</p>
                         
