--- a/src/partials/fixture-results.html
+++ b/src/partials/fixture-results.html
@@ -5,7 +5,7 @@
             <div class="columns">
                 <div class="column is-6 is-offset-3 is-offset-0-mobile">
 
-                    <div class="fixture-heading">
+                    <div class="main-heading">
                         <h1>Fixtures and results</h1>
                     </div>
                     
@@ -36,10 +36,46 @@
                             <img src="{{root}}assets/img/header-bottom.svg" alt="">
                         </div>
                     </div>
+
+                    <div class="fixture-item-wrapper">
+                        <div class="header-top">
+                            <img src="{{root}}assets/img/leaderboard-top.svg" alt="">
+                        </div>
+                        <div class="fixture-item">
+                            <div class="fixture-item-content">
+                                <div class="fixture-round-details">
+                                    <p class="fixture-round">Round 1</p>
+                                    <p class="fixure-date">SATUREDAY, <span class="is-bold">16 April</span></p>
+                                    <p class="fixure-time">NZ TIME <span class="is-bold">13:00</span></p>
+                                </div>
+                                <div class="result-winner first-game">
+                                    <p class="title">Game 1</p>
+                                    <p class="winner">TBA</p>
+                                    <p class="second">2nd <span class="is-bold">TBA</span></p>
+                                </div>
+                                <div class="result-winner">
+                                    <p class="title">Game 2</p>
+                                    <p class="winner">TBA</p>
+                                    <p class="second">2nd <span class="is-bold">TBS</span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="header-bottom">
+                            <img src="{{root}}assets/img/header-bottom.svg" alt="">
+                        </div>
+                    </div>
+
+
+
+
+
+
+
+
                         
                 </div>
             </div>
     
-            <div class="padding-x2"></div>
+            <!-- <div class="padding-x2"></div> -->
     </div>
 </section>
