--- a/src/partials/main-nav.html
+++ b/src/partials/main-nav.html
@@ -7,7 +7,7 @@
     
             <div class="nav-logo">
               <a href="index.html">
-                <img src="{{root}}assets/img/main-logo.svg" alt="Data Ventures">
+                <img src="{{root}}assets/img/main-logo-04.svg" alt="Data Ventures">
               </a>
             </div>
     
