--- a/src/assets/scss/templates/_leaderboard.scss
+++ b/src/assets/scss/templates/_leaderboard.scss
@@ -1,13 +1,30 @@
 
 $border-radius: 0.6em;
 
-// .main-wrapper {
-//     padding: 1.5em;
-// }
+.main-wrapper {
+    padding-top: 4em;
+}
 
-// .leaderboard-wrapper {
-//     padding: 1.5em;
-// }
+.intro-title {
+    p {
+        color: #fff;
+        font-family: $bold-font;
+        text-transform: uppercase;
+        line-height: 1;
+        margin-bottom: 0px;
+    }
+    .main-title {
+        font-size: 2.4em;
+    }
+
+    .next-round {
+        font-family: $main-font;
+        font-size: 1em;
+        span {
+            font-family: $bold-font;
+        }
+    }
+}
 
 .header-top {
     padding: 0px;
@@ -22,18 +39,26 @@ $border-radius: 0.6em;
 .header-bottom {
     padding: 0px;
     margin: 0px;
-    transform: translateY(-3px);
+    // transform: translateY(-3px);
     img {
         padding: 0px;
         margin: 0px;
     }
 }
 
+.main-heading {
+    h1 {
+        font-size: 1.8em;
+        margin-bottom: 0px;
+        color: #fff;
+        font-family: $bold-font;
+    }
+}
+
+
 .leaderboard-header {
     display: flex;
     justify-content: space-between;
-    // flex-direction: column;
-    // margin-bottom: 0.8em;
     align-items: baseline;
     h1 {
         font-size: 1.8em;
@@ -41,6 +66,10 @@ $border-radius: 0.6em;
     }
     p {
         margin-bottom: 5px;
+        font-size: 1em;
+        span {
+            font-family: $main-font;
+        }
 
     }
     .leaderboard-header-logo {
@@ -53,11 +82,11 @@ $border-radius: 0.6em;
 
 .leaderboard-title {
     background: darken($color: $theme-color, $amount: 2);
+    background: $theme-color;
     padding: 1em;
     display: grid;
     grid-template-columns: 1fr 6fr 1fr 1fr 1.5fr;
     padding-top: 0.5em;
-    // border-radius: $border-radius $border-radius 0px 0px;
     p {
         color: #fff;
         font-size: 0.9em;
@@ -69,14 +98,19 @@ $border-radius: 0.6em;
     }
 }
 
+.player-item-wrapper {
+    border-left: 6px solid $theme-color;
+    border-right: 6px solid $theme-color;
+    background: $theme-color;
+    z-index: 5000 !important;
+}
+
 .player-item {
-    // background: lighten($color: $theme-color, $amount: 2);
     background: #fff;
     padding: 1em;
     display: grid;
     grid-template-columns: 1fr 6fr 1fr 1fr 1.5fr;
     align-items: center;
-    // border-top: 1px solid #efefef;
     p {
         // color: #fff;
         color: $font-color;
@@ -92,10 +126,14 @@ $border-radius: 0.6em;
 
     .player-points {
         position: relative;
-        // background: green;
         background: url(../img/points-bg.svg) no-repeat center center;
         background-size: contain;
         padding: 0.5em;
+    }
+
+    .player-points.first-place {
+        background: url(../img/points-bg-first.svg) no-repeat center center;
+        background-size: contain;
     }
 
     .points-bg {
@@ -105,14 +143,13 @@ $border-radius: 0.6em;
     }
 
     .td-points {
-        background: $accent-color;
-        // height: auto;
-        // border-radius: 4px;
+        // background: $accent-color;
         font-family: $bold-font;
         color: $theme-color;
         z-index: 1000;
     }
 }
+
 
 .player-item:nth-child(even) {
     background: darken($color: $theme-color, $amount: 0.5);
@@ -124,11 +161,15 @@ $border-radius: 0.6em;
     border-radius: 0px 0px $border-radius $border-radius;
 }
 
+.player-item:first-child {
+    border-radius: $border-radius $border-radius 0px 0px;
+}
+
+
 .player-profile {
     display: flex;
     align-items: center;
     p {
-        // color: #fff;
         color: $font-color;
         font-size: 1.1em;
         font-weight: bold;
