--- a/src/partials/main-leaderboard.html
+++ b/src/partials/main-leaderboard.html
@@ -6,14 +6,25 @@
                 <div class="column is-6 is-offset-3 is-offset-0-mobile">
                     
                     <div class="leaderboard-wrapper">
+
+                        <div class="intro-title">
+                            <!-- <p>Season 1</p> -->
+                            <p class="main-title">
+                                Montessori<br>
+                                Poker<br>
+                                
+                            </p>
+                            <p class="next-round"><span>Next round: </span>Friday, </p>
+                        </div>
                         
-    
+                        <div class="padding-x1"></div>
+
                         <div class="leaderboard-header">
                             <!-- <div class="leaderboard-header-logo">
                                 <img src="{{root}}assets/img/header-logo.svg" alt="">
                             </div> -->
-                            <h1 class="text-reverse is-bold">LEADERBOARD</h1>
-                            <p class="text-reverse is-bold">Season 1 &#8212 2023</p>
+                            <h1 class="text-reverse is-bold">Leaderboard</h1>
+                            <p class="text-reverse is-bold">SEASON 1 <span>2023</span></p>
     
                         </div>
     
@@ -29,143 +40,148 @@
                             <p class="is-center">Points</p>
                         </div>
     
-                        <div class="player-item">
-                            <p class="player-pos is-center">1</p>
-                            <div class="player-profile">
-                                <div class="player-avatar wong">
+                        <div class="player-item-wrapper">
+                            <div class="player-item">
+                                <p class="player-pos is-center">1</p>
+                                <div class="player-profile">
+                                    <div class="player-avatar wong">
+                                    </div>
+                                    <p>Tim Wong</p>
                                 </div>
-                                <p>Tim Wong</p>
+                                <p class="is-center">1</p>
+                                <p class="is-center">0</p>
+                                <div class="players-points">
+                                    <p class="player-points first-place is-center"><span class="td-points">300</span></p>
+                                </div>
                             </div>
-                            <p class="is-center">1</p>
-                            <p class="is-center">0</p>
-                            <div class="players-points">
-                                <!-- <img src="{{root}}assets/img/points-bg.svg" alt=""> -->
-                                <p class="player-points is-center"><span class="td-points">300</span></p>
+        
+                            <div class="player-item">
+                                <p class="player-pos is-center">1</p>
+                                <div class="player-profile">
+                                    <div class="player-avatar meng">
+                                    </div>
+                                    <p>Meng How Tran</p>
+                                </div>
+                                <p class="is-center">1</p>
+                                <p class="is-center">0</p>
+                                <p class="player-points first-place is-center">
+                                <span class="td-points">300</span>
+                                </p>
+                            </div>
+        
+                            <div class="player-item">
+                                <p class="player-pos is-center">2</p>
+                                <div class="player-profile">
+                                    <div class="player-avatar alex">
+                                    </div>
+                                    <p>Alex Harden</p>
+                                </div>
+                                <p class="is-center">0</p>
+                                <p class="is-center">0</p>
+                                <p class="player-points is-center"><span class="td-points">200</span></p>
+                            </div>
+        
+                            <div class="player-item">
+                                <p class="player-pos is-center">4</p>
+                                <div class="player-profile">
+                                    <div class="player-avatar michael">
+                                    </div>
+                                    <p>Michael Harden</p>
+                                </div>
+                                <p class="is-center">0</p>
+                                <p class="is-center">0</p>
+                                <p class="player-points is-center">
+                                    <span class="td-points">45</span>
+                                </p>
+                            </div>
+        
+                            <div class="player-item">
+                                <p class="player-pos is-center">4</p>
+                                <div class="player-profile">
+                                    <div class="player-avatar owen">
+                                    </div>
+                                    <p>Owen SO</p>
+                                </div>
+                                <p class="is-center">0</p>
+                                <p class="is-center">0</p>
+                                <p class="player-points is-center">
+                                    <span class="td-points">45</span>
+                                </p>
+                            </div>
+        
+                            <div class="player-item">
+                                <p class="player-pos is-center">4</p>
+                                <div class="player-profile">
+                                    <div class="player-avatar rath">
+                                    </div>
+                                    <p>Rath Prak</p>
+                                </div>
+                                <p class="is-center">0</p>
+                                <p class="is-center">0</p>
+                                <p class="player-points is-center">
+                                    <span class="td-points">45</span>
+                                </p>
+                            </div>
+        
+                            <div class="player-item">
+                                <p class="player-pos is-center">4</p>
+                                <div class="player-profile">
+                                    <div class="player-avatar rajon">
+                                    </div>
+                                    <p>Rajon Khan</p>
+                                </div>
+                                <p class="is-center">0</p>
+                                <p class="is-center">0</p>
+                                <p class="player-points is-center">
+                                    <span class="td-points">45</span>
+                                </p>
+                            </div>
+        
+                            <div class="player-item">
+                                <p class="player-pos is-center">5</p>
+                                <div class="player-profile">
+                                    <div class="player-avatar kyo">
+                                    </div>
+                                    <p>Kyosuke Segawa</p>
+                                </div>
+                                <p class="is-center">0</p>
+                                <p class="is-center">0</p>
+                                <p class="player-points is-center">
+                                    <span class="td-points">0</span>
+                                </p>
+                            </div>
+        
+                            <div class="player-item">
+                                <p class="player-pos is-center">5</p>
+                                <div class="player-profile">
+                                    <div class="player-avatar ryan">
+                                    </div>
+                                    <p>Ryan Lewis</p>
+                                </div>
+                                <p class="is-center">0</p>
+                                <p class="is-center">0</p>
+                                <p class="player-points is-center">
+                                    <span class="td-points">0</span>
+                                </p>
+                            </div>
+        
+                            <div class="player-item">
+                                <p class="player-pos is-center">5</p>
+                                <div class="player-profile">
+                                    <div class="player-avatar kinda">
+                                    </div>
+                                    <p>Kinda Pan</p>
+                                </div>
+                                <p class="is-center">0</p>
+                                <p class="is-center">0</p>
+                                <p class="player-points is-center">
+                                    <span class="td-points">0</span>
+                                </p>
                             </div>
                         </div>
-    
-                        <div class="player-item">
-                            <p class="player-pos is-center">1</p>
-                            <div class="player-profile">
-                                <div class="player-avatar meng">
-                                </div>
-                                <p>Meng How Tran</p>
-                            </div>
-                            <p class="is-center">1</p>
-                            <p class="is-center">0</p>
-                            <p class="player-points is-center">
-                            <span class="td-points">300</span>
-                            </p>
-                        </div>
-    
-                        <div class="player-item">
-                            <p class="player-pos is-center">2</p>
-                            <div class="player-profile">
-                                <div class="player-avatar alex">
-                                </div>
-                                <p>Alex Harden</p>
-                            </div>
-                            <p class="is-center">0</p>
-                            <p class="is-center">0</p>
-                            <p class="player-points is-center"><span class="td-points">200</span></p>
-                        </div>
-    
-                        <div class="player-item">
-                            <p class="player-pos is-center">4</p>
-                            <div class="player-profile">
-                                <div class="player-avatar michael">
-                                </div>
-                                <p>Michael Harden</p>
-                            </div>
-                            <p class="is-center">0</p>
-                            <p class="is-center">0</p>
-                            <p class="player-points is-center">
-                                <span class="td-points">45</span>
-                            </p>
-                        </div>
-    
-                        <div class="player-item">
-                            <p class="player-pos is-center">4</p>
-                            <div class="player-profile">
-                                <div class="player-avatar owen">
-                                </div>
-                                <p>Owen SO</p>
-                            </div>
-                            <p class="is-center">0</p>
-                            <p class="is-center">0</p>
-                            <p class="player-points is-center">
-                                <span class="td-points">45</span>
-                            </p>
-                        </div>
-    
-                        <div class="player-item">
-                            <p class="player-pos is-center">4</p>
-                            <div class="player-profile">
-                                <div class="player-avatar rath">
-                                </div>
-                                <p>Rath Prak</p>
-                            </div>
-                            <p class="is-center">0</p>
-                            <p class="is-center">0</p>
-                            <p class="player-points is-center">
-                                <span class="td-points">45</span>
-                            </p>
-                        </div>
-    
-                        <div class="player-item">
-                            <p class="player-pos is-center">4</p>
-                            <div class="player-profile">
-                                <div class="player-avatar rajon">
-                                </div>
-                                <p>Rajon Khan</p>
-                            </div>
-                            <p class="is-center">0</p>
-                            <p class="is-center">0</p>
-                            <p class="player-points is-center">
-                                <span class="td-points">45</span>
-                            </p>
-                        </div>
-    
-                        <div class="player-item">
-                            <p class="player-pos is-center">5</p>
-                            <div class="player-profile">
-                                <div class="player-avatar kyo">
-                                </div>
-                                <p>Kyosuke Segawa</p>
-                            </div>
-                            <p class="is-center">0</p>
-                            <p class="is-center">0</p>
-                            <p class="player-points is-center">
-                                <span class="td-points">0</span>
-                            </p>
-                        </div>
-    
-                        <div class="player-item">
-                            <p class="player-pos is-center">5</p>
-                            <div class="player-profile">
-                                <div class="player-avatar ryan">
-                                </div>
-                                <p>Ryan Lewis</p>
-                            </div>
-                            <p class="is-center">0</p>
-                            <p class="is-center">0</p>
-                            <p class="player-points is-center">
-                                <span class="td-points">0</span>
-                            </p>
-                        </div>
-    
-                        <div class="player-item">
-                            <p class="player-pos is-center">5</p>
-                            <div class="player-profile">
-                                <div class="player-avatar kinda">
-                                </div>
-                                <p>Kinda Pan</p>
-                            </div>
-                            <p class="is-center">0</p>
-                            <p class="is-center">0</p>
-                            <p class="player-points is-center">
-                                <span class="td-points">0</span>
-                            </p>
+
+                        <div class="header-bottom">
+                            <img src="{{root}}assets/img/header-bottom.svg" alt="">
                         </div>
     
                     </div>
