--- a/src/assets/scss/base/_colors.scss
+++ b/src/assets/scss/base/_colors.scss
@@ -2,7 +2,7 @@
 $brand-color: #EE6823; 
 $theme-color: #151740;
 // $theme-color: #37003C;
-$accent-color: #EC6276;
+$accent-color: #85C6A4;
 
 $secondary-color-light: #262F4A;
 $secondary-color-light-02: #495471;
