--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -4,7 +4,7 @@
     <div class="padding-x0"></div>
     <div class="footer-logo-wrapper">
         <div class="footer-logo">
-            <img src="{{root}}assets/img/header-logo.svg" alt="Data Ventures">
+            <img src="{{root}}assets/img/main-logo-04.svg" alt="Data Ventures">
         </div>
     </div>
     <div class="footer-disclaimers">
