--- a/src/partials/main-leaderboard.html
+++ b/src/partials/main-leaderboard.html
@@ -3,18 +3,17 @@
 
         <div class="padding-x2"></div>
             <div class="columns">
-                <div class="column is-6 is-offset-3 is-offset-0-mobile">
+                <div class="column is-6-desktop is-offset-3-desktop is-offset-0-mobile">
                     
                     <div class="leaderboard-wrapper">
 
                         <div class="intro-title">
                             <!-- <p>Season 1</p> -->
                             <p class="main-title">
-                                Montessori<br>
-                                Poker<br>
+                                Montessori Poker<br>
                                 
                             </p>
-                            <p class="next-round"><span>Next round: </span>Friday, </p>
+                            <p class="sub-title"><span>SEASON 1, 2023  </span></p>
                         </div>
                         
                         <div class="padding-x1"></div>
@@ -24,20 +23,20 @@
                                 <img src="{{root}}assets/img/header-logo.svg" alt="">
                             </div> -->
                             <h1 class="text-reverse is-bold">Leaderboard</h1>
-                            <p class="text-reverse is-bold">SEASON 1 <span>2023</span></p>
+                            <p class="text-reverse is-bold">ROUND 1</p>
     
                         </div>
-    
+<!--     
                         <div class="header-top">
                             <img src="{{root}}assets/img/leaderboard-top.svg" alt="">
-                        </div>
+                        </div> -->
     
                         <div class="leaderboard-title">
-                            <p class="player-pos is-center">Position</p>
+                            <p class="player-pos is-center">Pos</p>
                             <p>Player</p>
                             <p class="is-center">Cashes</p>
                             <p class="is-center">Titles</p>
-                            <p class="is-center">Points</p>
+                            <p class="is-center">Pts</p>
                         </div>
     
                         <div class="player-item-wrapper">
@@ -180,9 +179,9 @@
                             </div>
                         </div>
 
-                        <div class="header-bottom">
+                        <!-- <div class="header-bottom">
                             <img src="{{root}}assets/img/header-bottom.svg" alt="">
-                        </div>
+                        </div> -->
     
                     </div>
     
