--- a/src/assets/scss/templates/_leaderboard.scss
+++ b/src/assets/scss/templates/_leaderboard.scss
@@ -5,6 +5,13 @@ $border-radius: 0.6em;
     padding-top: 4em;
 }
 
+
+@media screen and (min-width: 40em) {
+    .main-wrapper {
+        padding-top: 4em;
+    }
+}
+
 .intro-title {
     p {
         color: #fff;
@@ -12,16 +19,31 @@ $border-radius: 0.6em;
         text-transform: uppercase;
         line-height: 1;
         margin-bottom: 0px;
+        text-align: center;
     }
     .main-title {
-        font-size: 2.4em;
+        font-size: 1.6em;
+        margin-bottom: 5px;
     }
 
-    .next-round {
+    .sub-title {
         font-family: $main-font;
         font-size: 1em;
         span {
             font-family: $bold-font;
+        }
+    }
+}
+
+@media screen and (min-width: 40em) {
+    .intro-title {
+        .main-title {
+            font-size: 2.6em;
+            margin-bottom: 5px;
+        }
+    
+        .sub-title {
+            font-size: 1.3em;
         }
     }
 }
@@ -39,10 +61,16 @@ $border-radius: 0.6em;
 .header-bottom {
     padding: 0px;
     margin: 0px;
-    // transform: translateY(-3px);
+    transform: translateY(-5px);
     img {
         padding: 0px;
         margin: 0px;
+    }
+}
+
+@media screen and (min-width: 40em ) {
+    .header-bottom {
+        transform: translateY(-3px);
     }
 }
 
@@ -61,7 +89,7 @@ $border-radius: 0.6em;
     justify-content: space-between;
     align-items: baseline;
     h1 {
-        font-size: 1.8em;
+        font-size: 1.4em;
         margin-bottom: 5px;
     }
     p {
@@ -80,21 +108,49 @@ $border-radius: 0.6em;
     }
 }
 
+@media screen and (min-width: 40em) {
+    .leaderboard-header {
+        h1 {
+            font-size: 1.8em;
+            margin-bottom: 5px;
+        }
+        p {
+            margin-bottom: 5px;
+            font-size: 1em;
+        }
+    }
+}
+
 .leaderboard-title {
     background: darken($color: $theme-color, $amount: 2);
     background: $theme-color;
-    padding: 1em;
+    padding: 0.6em;
+    padding-right: 1.2em;
     display: grid;
-    grid-template-columns: 1fr 6fr 1fr 1fr 1.5fr;
+    grid-template-columns: 1fr 6fr 1.5fr 1.5fr 1.5fr;
     padding-top: 0.5em;
+    border-radius: $border-radius $border-radius 0 0;
     p {
         color: #fff;
-        font-size: 0.9em;
-        font-weight: bold;
+        font-size: 0.8em;
+        font-family: $main-font !important;
         margin-bottom: 0px;
     }
     .player-pos {
-        padding-right: 1.5em;
+        padding-right: 0.9em;
+    }
+}
+
+@media screen and (min-width: 40em) {
+    .leaderboard-title {
+        grid-template-columns: 1fr 6fr 1fr 1fr 1.5fr;
+        padding: 1em;
+        p {
+            font-size: 0.9em;
+        }
+        .player-pos {
+            padding-right: 1.5em;
+        }
     }
 }
 
@@ -103,24 +159,26 @@ $border-radius: 0.6em;
     border-right: 6px solid $theme-color;
     background: $theme-color;
     z-index: 5000 !important;
+    border-radius: 0 0 $border-radius $border-radius;
+    padding-bottom: 0.5em;
 }
 
 .player-item {
     background: #fff;
-    padding: 1em;
+    padding: 0.6em;
     display: grid;
-    grid-template-columns: 1fr 6fr 1fr 1fr 1.5fr;
+    grid-template-columns: 1fr 6fr 1.5fr 1.5fr 1.5fr;
     align-items: center;
     p {
         // color: #fff;
         color: $font-color;
-        font-size: 1.1em;
+        font-size: 1em;
         margin-bottom: 0px; 
         font-family: $bold-font;
     }
 
     .player-pos {
-        padding-right: 1.5em;
+        padding-right: 1em;
         font-family: $bold-font;
     }
 
@@ -151,6 +209,28 @@ $border-radius: 0.6em;
 }
 
 
+@media screen and (min-width: 40em) {
+    .player-item-wrapper {
+        padding-bottom: 1em;
+    }
+    .player-item {
+        padding: 1em;
+        grid-template-columns: 1fr 6fr 1fr 1fr 1.5fr;
+        p {
+            font-size: 1.1em;
+        }
+    
+        .player-pos {
+            padding-right: 1.5em;
+        }
+    
+        .player-points {
+            padding: 0.5em;
+        }
+    }
+}
+
+
 .player-item:nth-child(even) {
     background: darken($color: $theme-color, $amount: 0.5);
     background: #f4f4f4;
@@ -171,19 +251,39 @@ $border-radius: 0.6em;
     align-items: center;
     p {
         color: $font-color;
-        font-size: 1.1em;
-        font-weight: bold;
+        font-size: 0.9em;
         margin-bottom: 0px;
-        padding-left: 30px; 
+        padding-left: 10px; 
+        font-family: $bold-font !important;
     }
 }
 
 .player-avatar {
-    width: 45px;
-    height: 45px;
-    border: 1px solid #fff;
-    border-radius: 50%;
+    width: 35px;
+    height: 35px;
+    border-radius: 100%;
 }
+
+
+@media screen and (min-width: 40em) {
+    .player-profile {
+        p {
+            font-size: 1.1em;
+            padding-left: 30px; 
+        }
+    }
+    
+    .player-avatar {
+        width: 45px;
+        height: 45px;
+    }
+}
+
+
+
+
+
+
 
 
 
